--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "expo-linear-gradient": "~14.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
